--- a/src/website/css/documentation.css
+++ b/src/website/css/documentation.css
@@ -1,64 +1,116 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Calibri, sans-serif;
     margin: 0;
     padding: 20px;
-    line-height: 1.6;
-}
-
-h1 {
+    background-color: #f9f9f9;
     color: #333;
-    font-size: 2em;
-    margin-bottom: 20px;
-}
-
-h2 {
-    color: #555;
-    font-size: 1.5em;
-    margin-top: 30px;
-    margin-bottom: 15px;
-}
-
-h3 {
-    color: #777;
-    font-size: 1.2em;
+  }
+  
+  h1, h2, h3 {
+    color: #ff4a57;
+  }
+  
+  h2, h3 {
     margin-top: 20px;
-    margin-bottom: 10px;
-}
-
-p {
-    color: #333;
+  }
+  
+  p {
+    font-size: 18px;
+    line-height: 1.6;
+  }
+  
+  ul, ol {
+    font-size: 18px;
+    line-height: 1.6;
     margin-bottom: 20px;
-}
-
-pre {
-    background-color: #f4f4f4;
+  }
+  
+  li {
+    margin-bottom: 10px;
+  }
+  
+  pre {
+    background-color: #f2f2f2;
     padding: 10px;
     border-radius: 5px;
-    overflow-x: auto;
-}
-
-code {
-    font-family: monospace;
-    font-size: 0.9em;
-    color: #333;
-}
-
-ul {
-    list-style: disc;
     margin-bottom: 20px;
+    font-size: 16px;
+  }
+  
+  code {
+    font-family: "Courier New", monospace;
+  }
+  
+  .code-container {
+    position: relative;
+    margin-bottom: 20px;
+  }
+  
+  .copy-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #ff4a57;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .copy-button:hover {
+    background-color: #333;
+  }
+  
+  .copy-message {
+    font-size: 14px;
+    color: #4caf50;
+    display: inline-block;
+    margin-left: 10px;
+    vertical-align: middle;
+  }
+  
+  .container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0;
+  }
+  
+  h1 {
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+  
+  h2 {
+    font-size: 30px;
+  }
+  
+  h3 {
+    font-size: 24px;
+  }
+  
+  ul, ol {
+    list-style-type: disc;
     padding-left: 20px;
-}
-
-li {
-    color: #333;
+  }
+  
+  ul li, ol li {
     margin-bottom: 10px;
-}
-
-a {
-    color: #007bff;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
+  }
+  
+  ul ul, ol ul {
+    list-style-type: circle;
+  }
+  
+  ul ul li, ol ul li {
+    margin-bottom: 5px;
+  }
+  
+  ul ul ul, ol ul ul {
+    list-style-type: square;
+  }
+  
+  ul ul ul li, ol ul ul li {
+    margin-bottom: 0;
+  }
+  
